Got the website working with merged changed from rainford, fixed content image on mobile screen sizes

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -572,7 +572,7 @@
             background-position: center;
             background-repeat: no-repeat;
             padding: 23px 0px;
-            width: calc(100% - 47px);
+            width: calc(232px - 0px);
             margin: auto;
             margin-top: -64px;
             position: relative;
